--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Pretendard !important;
 }
 
 html,
@@ -18,26 +19,26 @@ body {
 body {
   align-items: center;
 
-  background: rgb(2, 0, 36);
-  background: rgb(20, 200, 69);
-  background: rgb(20, 200, 69);
-  background: linear-gradient(
-    45deg,
-    rgba(20, 200, 69, 1) 12%,
-    rgba(20, 200, 69, 1) 17%,
-    rgba(20, 200, 69, 1) 19%,
-    rgba(20, 200, 69, 1) 22%,
-    rgba(20, 200, 69, 1) 35%,
-    rgba(19, 214, 132, 1) 53%,
-    rgba(19, 222, 167, 1) 63%,
-    rgba(19, 227, 188, 1) 69%,
-    rgba(18, 233, 216, 1) 77%,
-    rgba(18, 239, 240, 1) 84%,
-    rgba(18, 239, 240, 1) 90%
-  );
+  background: #f2fcfb;
+
   display: flex;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+span,
+li,
+#headline {
+  background: -webkit-linear-gradient(45deg, #00c5c4, #00d79c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#header {
+  content: url("./src/wecareu.png");
+  width: 10vw;
+  height: 10vh;
+  margin: 0 auto;
 }
 
 .container {
@@ -47,7 +48,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  justify-content: space-around;
+  justify-content: space-between;
   height: 100%;
 }
 
@@ -84,6 +85,10 @@ li span {
   color: gray;
 }
 
+footer {
+  margin-bottom: 32px;
+}
+
 @media all and (max-width: 768px) {
   h1 {
     font-size: calc(1.5rem * var(--smaller));
@@ -95,5 +100,18 @@ li span {
 
   li span {
     font-size: calc(3.375rem * var(--smaller));
+  }
+}
+
+#headline {
+  animation: 1s linear 1s infinite alternate slidein;
+}
+
+@keyframes slidein {
+  from {
+    transform: scale(0.95);
+  }
+  to {
+    transform: scale(1.4);
   }
 }
